Change app to a JavaFX app
Change app code to show a JavaFX window.
Move app to src/flexishowbuilder folder.
Add build instructions into README.md.